test: modify and add test for new factory implementation with 100% coverage