@@ -2,6 +2,7 @@ package it.polimi.ingsw.am48.model.factory;
 
 import it.polimi.ingsw.am48.dto.CardDTO;
 import it.polimi.ingsw.am48.dto.StrategyDTO;
+import it.polimi.ingsw.am48.model.card.EventCard;
 import it.polimi.ingsw.am48.model.enums.Era;
 import it.polimi.ingsw.am48.model.enums.EventType;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,26 +15,56 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class EventFactoryTest {
 
-    private CardDTO dtoWithStrategy;
-    private CardDTO dtoWithoutStrategy;
+    // Helper per costruire un DTO evento con la strategia corretta
+    private CardDTO buildHuntEventDto(String id, String era) {
+        StrategyDTO s = new StrategyDTO();
+        s.effect = "HuntEventStrategy";
+        s.num1 = 2;
+        CardDTO dto = new CardDTO();
+        dto.id = id;
+        dto.era = era;
+        dto.eventType = "HUNTER_EVENT";
+        dto.strategy = s;
+        return dto;
+    }
 
-    @BeforeEach
-    void setUp() {
-        StrategyDTO strategy = new StrategyDTO();
-        strategy.effect = "SomeEventStrategy";
-        strategy.notificator = "OnEvent";
+    private CardDTO buildArtistEventDto(String id, String era) {
+        StrategyDTO s = new StrategyDTO();
+        s.effect = "ArtistEventStrategy";
+        s.num1 = 2;
+        s.num2 = 3;
+        s.num3 = 1;
+        CardDTO dto = new CardDTO();
+        dto.id = id;
+        dto.era = era;
+        dto.eventType = "ARTIST_EVENT";
+        dto.strategy = s;
+        return dto;
+    }
 
-        dtoWithStrategy = new CardDTO();
-        dtoWithStrategy.id = "EVT-01";
-        dtoWithStrategy.era = "FIRST";
-        dtoWithStrategy.eventType = "HUNTER_EVENT";
-        dtoWithStrategy.strategy = strategy;
+    private CardDTO buildShamanEventDto(String id, String era) {
+        StrategyDTO s = new StrategyDTO();
+        s.effect = "ShamanEventStrategy";
+        s.num1 = 3;
+        s.num2 = 7;
+        CardDTO dto = new CardDTO();
+        dto.id = id;
+        dto.era = era;
+        dto.eventType = "SHAMAN_EVENT";
+        dto.strategy = s;
+        return dto;
+    }
 
-        dtoWithoutStrategy = new CardDTO();
-        dtoWithoutStrategy.id = "EVT-02";
-        dtoWithoutStrategy.era = "SECOND";
-        dtoWithoutStrategy.eventType = "HUNTER_EVENT";
-        dtoWithoutStrategy.strategy = null;
+    private CardDTO buildSustenanceDto(String id, String era) {
+        StrategyDTO s = new StrategyDTO();
+        s.effect = "SustenanceStrategy";
+        s.num1 = 1;
+        CardDTO dto = new CardDTO();
+        dto.id = id;
+        dto.era = era;
+        dto.eventType = "PICKER_EVENT";
+        dto.strategy = s;
+        return dto;
     }
 
     // ==================== createCards - validation ====================
@@ -41,31 +72,29 @@ class EventFactoryTest {
     @Test
     @DisplayName("createCards: should throw IllegalArgumentException for numPlayers below minimum")
     void shouldThrowForNumPlayersBelowMinimum() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        assertThrows(IllegalArgumentException.class, () -> factory.createCards(1));
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST"))).createCards(1));
     }
 
     @Test
     @DisplayName("createCards: should throw IllegalArgumentException for numPlayers above maximum")
     void shouldThrowForNumPlayersAboveMaximum() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        assertThrows(IllegalArgumentException.class, () -> factory.createCards(6));
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST"))).createCards(6));
     }
 
     @Test
     @DisplayName("createCards: should accept minimum valid numPlayers (2)")
     void shouldAcceptMinimumValidNumPlayers() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        //Event Strategies needed
-        //assertDoesNotThrow(() -> factory.createCards(2));
+        assertDoesNotThrow(
+                () -> new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST"))).createCards(2));
     }
 
     @Test
     @DisplayName("createCards: should accept maximum valid numPlayers (5)")
     void shouldAcceptMaximumValidNumPlayers() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        //Event Strategies needed
-        //assertDoesNotThrow(() -> factory.createCards(5));
+        assertDoesNotThrow(
+                () -> new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST"))).createCards(5));
     }
 
     // ==================== createCards - missing strategy ====================
@@ -73,16 +102,26 @@ class EventFactoryTest {
     @Test
     @DisplayName("createCards: should throw IllegalArgumentException when DTO has no strategy")
     void shouldThrowWhenDtoHasNoStrategy() {
-        EventFactory factory = new EventFactory(List.of(dtoWithoutStrategy));
-        assertThrows(IllegalArgumentException.class, () -> factory.createCards(2));
+        CardDTO dto = new CardDTO();
+        dto.id = "EVT-02";
+        dto.era = "SECOND";
+        dto.eventType = "HUNTER_EVENT";
+        dto.strategy = null;
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(dto)).createCards(2));
     }
 
     @Test
     @DisplayName("createCards: should throw for the offending DTO even when other valid DTOs are present")
     void shouldThrowForOffendingDtoEvenWhenOtherDtosAreValid() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy, dtoWithoutStrategy));
-        //Event Strategies needed
-        //assertThrows(IllegalArgumentException.class, () -> factory.createCards(2));
+        CardDTO noStrategy = new CardDTO();
+        noStrategy.id = "EVT-BAD";
+        noStrategy.era = "FIRST";
+        noStrategy.eventType = "HUNTER_EVENT";
+        noStrategy.strategy = null;
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST"), noStrategy))
+                        .createCards(2));
     }
 
     // ==================== createCards - mapping ====================
@@ -90,65 +129,101 @@ class EventFactoryTest {
     @Test
     @DisplayName("createCards: should return one EventCard per DTO provided")
     void shouldCreateOneCardPerDto() {
-        StrategyDTO strategy2 = new StrategyDTO();
-        strategy2.effect = "AnotherEventStrategy";
-        strategy2.notificator = "OnEvent";
-
-        CardDTO dto2 = new CardDTO();
-        dto2.id = "EVT-03";
-        dto2.era = "THIRD";
-        dto2.eventType = "SHAMAN_EVENT";
-        dto2.strategy = strategy2;
-
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy, dto2));
-        //Event Strategies needed
-        //assertEquals(2, factory.createCards(2).size());
+        EventFactory factory = new EventFactory(List.of(
+                buildHuntEventDto("EVH-01", "FIRST"),
+                buildShamanEventDto("EVS-01", "SECOND")));
+        assertEquals(2, factory.createCards(2).size());
     }
 
     @Test
     @DisplayName("createCards: should map card id correctly from DTO")
     void shouldMapCardIdCorrectly() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        //Event Strategies needed
-        //assertEquals("EVT-01", factory.createCards(2).get(0).getCardId());
+        EventFactory factory = new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST")));
+        assertEquals("EVH-01", factory.createCards(2).getFirst().getCardId());
     }
 
     @Test
     @DisplayName("createCards: should map era correctly from DTO")
     void shouldMapEraCorrectly() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        //Event Strategies needed
-        //assertEquals(Era.FIRST, factory.createCards(2).get(0).getEra());
+        EventFactory factory = new EventFactory(List.of(buildHuntEventDto("EVH-01", "SECOND")));
+        assertEquals(Era.SECOND, factory.createCards(2).getFirst().getEra());
     }
 
     @Test
     @DisplayName("createCards: should map eventType correctly from DTO")
     void shouldMapEventTypeCorrectly() {
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        //Event Strategies needed
-        //assertEquals(EventType.HUNTER_EVENT, factory.createCards(2).get(0).getEventType());
+        EventFactory factory = new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST")));
+        assertEquals(EventType.HUNTER_EVENT, factory.createCards(2).getFirst().getEventType());
     }
 
     @Test
     @DisplayName("createCards: should return empty list when given an empty DTO list")
     void shouldReturnEmptyListForEmptyDtoList() {
-        EventFactory factory = new EventFactory(List.of());
-        assertTrue(factory.createCards(2).isEmpty());
+        assertTrue(new EventFactory(List.of()).createCards(2).isEmpty());
     }
 
     @Test
     @DisplayName("createCards: should throw IllegalArgumentException for unknown era value")
     void shouldThrowForUnknownEraValue() {
-        dtoWithStrategy.era = "INVALID_ERA";
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        assertThrows(IllegalArgumentException.class, () -> factory.createCards(2));
+        CardDTO dto = buildHuntEventDto("EVH-01", "INVALID_ERA");
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(dto)).createCards(2));
     }
 
     @Test
     @DisplayName("createCards: should throw IllegalArgumentException for unknown eventType value")
     void shouldThrowForUnknownEventTypeValue() {
-        dtoWithStrategy.eventType = "INVALID_EVENT_TYPE";
-        EventFactory factory = new EventFactory(List.of(dtoWithStrategy));
-        assertThrows(IllegalArgumentException.class, () -> factory.createCards(2));
+        CardDTO dto = buildHuntEventDto("EVH-01", "FIRST");
+        dto.eventType = "INVALID_EVENT_TYPE";
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(dto)).createCards(2));
+    }
+
+    // ==================== buildStrategy - ogni ramo del switch ====================
+
+    @Test
+    @DisplayName("buildStrategy: should build ArtistEventStrategy correctly")
+    void shouldBuildArtistEventStrategy() {
+        EventCard card = new EventFactory(List.of(buildArtistEventDto("EVA-01", "FIRST")))
+                .createCards(2).getFirst();
+        assertNotNull(card.getStrategy());
+    }
+
+    @Test
+    @DisplayName("buildStrategy: should build HuntEventStrategy correctly")
+    void shouldBuildHuntEventStrategy() {
+        EventCard card = new EventFactory(List.of(buildHuntEventDto("EVH-01", "FIRST")))
+                .createCards(2).getFirst();
+        assertNotNull(card.getStrategy());
+    }
+
+    @Test
+    @DisplayName("buildStrategy: should build ShamanEventStrategy correctly")
+    void shouldBuildShamanEventStrategy() {
+        EventCard card = new EventFactory(List.of(buildShamanEventDto("EVS-01", "SECOND")))
+                .createCards(2).getFirst();
+        assertNotNull(card.getStrategy());
+    }
+
+    @Test
+    @DisplayName("buildStrategy: should build SustenanceStrategy correctly")
+    void shouldBuildSustenanceStrategy() {
+        EventCard card = new EventFactory(List.of(buildSustenanceDto("EVP-01", "FIRST")))
+                .createCards(2).getFirst();
+        assertNotNull(card.getStrategy());
+    }
+
+    @Test
+    @DisplayName("buildStrategy: should throw IllegalArgumentException for unknown strategy effect")
+    void shouldThrowForUnknownStrategyEffect() {
+        StrategyDTO s = new StrategyDTO();
+        s.effect = "UnknownEventStrategy";
+        CardDTO dto = new CardDTO();
+        dto.id = "EVT-XX";
+        dto.era = "FIRST";
+        dto.eventType = "HUNTER_EVENT";
+        dto.strategy = s;
+        assertThrows(IllegalArgumentException.class,
+                () -> new EventFactory(List.of(dto)).createCards(2));
     }
 }
